--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,7 @@
     "react-loader-spinner": "^6.0.0-0",
     "react-query": "^3.34.16",
     "react-router-dom": "^6.2.2",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.0",
     "styled-components": "^5.3.3",
     "typescript": "^4.6.2",
     "uuid": "^8.3.2",
