--- a/frontend/package.json
+++ b/frontend/package.json
@@ -56,6 +56,7 @@
     ]
   },
   "devDependencies": {
-    "@types/styled-components": "^5.1.24"
+    "@types/styled-components": "^5.1.24",
+    "@types/uuid": "^8.3.4"
   }
 }
