--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,8 @@
   "license": "ISC",
   "devDependencies": {
     "dotenv": "^16.0.0",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "heroku-postbuild": "cd frontend && npm install && npm install --only-dev && npm run build"
   },
   "dependencies": {
     "cors": "^2.8.5",
